# xo

./: .gitignore  README.md  flake.nix
xo/: .gitignore  README.md  mix.exs
xo-cli/: Cargo.toml
xo-cli/src/: main.rs
xo/assets/: tailwind.config.js
xo/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
xo/lib/: xo.ex  xo_web.ex
xo/lib/xo/: application.ex  post.ex  repo.ex  user.ex
xo/lib/xo_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
xo/lib/xo_web/components/: core_components.ex  layouts.ex
xo/lib/xo_web/components/layouts/: app.html.heex  root.html.heex
xo/lib/xo_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex  post_controller.ex  post_json.ex  xo_controller.ex  xo_html.ex
xo/lib/xo_web/live/: timeline_live.ex
xo/priv/repo/: seeds.exs
xo/priv/repo/migrations/: 20240506092817_create_users.exs  20240506093852_create_posts.exs
xo/test/: test_helper.exs
xo/test/support/: conn_case.ex  data_case.ex
xo/test/xo_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
