[package]
name = "xo-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
url = "2.5.0"
